# wro-editor

./: .clang-format  .gitignore  meson.build
include/: constants.hpp  game.hpp  record.hpp  robot.hpp  shader.hpp  ui.hpp  util.hpp
shaders/: basic.fs  color.fs  color.vs  texture.vs
src/: .gitignore  game.cpp  game.hpp  main.cpp  robot.cpp  shader.cpp  ui.cpp  util.cpp
subprojects/glad/: meson.build
subprojects/glad/include/glad/: glad.h
subprojects/glad/src/: glad.c
subprojects/imgui/: meson.build
